apps/rollout/overlays/bluegreen/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen
  name: bluegreen-active
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: bluegreen
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bluegreen
  name: bluegreen-preview
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: bluegreen
