apps/rollout/overlays/bluegreen/route-active.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bluegreen-active
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: bluegreen-active
